# dna-encoder

./: LICENSE  MANIFEST.in  README.md  analysis_hyperstat.py  hyperstat_results.csv  primers.txt  pyproject.toml  setup.py
dna_encoder/: __init__.py  __main__.py  backtracking_engine.py  config.py  decoder.py  default_profiles.json  encoder.py  exceptions.py  results.py  utils.py
examples/: 01_basic_usage.py  02_validation_profiles.py  03_with_primers.py  04_binary_data.py
tests/: test_edge_cases.py  test_profile_statistics.py  test_with_primers.py
